# comphdl

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  build_demo.sh  create_all_branches.sh  demo.js  package-lock.json  package.json  test.txt
benches/: bench.rs
ci/: build_and_publish_demo.sh  build_demo.sh  install_cargo_web.sh  parcel.sh  tag.sh
comphdl_cli/: Cargo.toml
comphdl_cli/src/: main.rs
comphdl_core/: Cargo.toml
comphdl_core/benches/: bench.rs
comphdl_core/src/: _comphdl1.rs  comphdl1.lalrpop  component.rs  emit_json.rs  lib.rs  main.rs  parser.rs  simulation.rs  wave_json.rs
comphdl_web/: Cargo.toml
comphdl_web/src/: js_gui.rs  main.rs  stdweb_logger.rs
demo/nightly/: Cargo.1f613bf6.cargo-web-398fc556ba2b08aea6f4fadc3880dfdf  Cargo.7419331f.js  Cargo.7419331f.map  index.html  static.5b0e70c2.js  xterm.a1ebb247.map
demo/nightly/comphdl_examples/: example1.txt  ram.txt  srlatch.txt
demo/v07/: comphdl.js  comphdl.wasm  index.html  index_js.js  netlistsvg.js
demo/v07/comphdl_examples/: example1.txt  rslatch.txt
demo/v08/: comphdl.js  comphdl.wasm  index.html  netlistsvg.js
demo/v09/: comphdl.js  comphdl.wasm  netlistsvg.js
demo/v10/: Cargo.7419331f.js  index.html  static.5b0e70c2.js
src/: bit.rs  comphdl1.lalrpop  component.rs  emit_json.rs  js_gui.rs  lib.rs  main.rs  parser.rs  simulation.rs  stdweb_logger.rs
static/: index.html  index.js  index_js.js  wavedrom_fast_update.js
static/comphdl_examples/: bufbufbuf.txt  cat.txt  example1.txt  rslatch.txt  srlatch.txt
static/xtermjs/: xterm.js.map
(+3 files in other folders)
