[package]
name = "comphdl"
version = "0.1.0"
authors = ["Badel2 <2badel2@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.16"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
vcd = "0.4"
lalrpop-util = "0.16"
regex = "1.0"
stdweb = { version = "0.4", optional = true }
log = "0.4"
env_logger = "0.5"
ansi_term = "0.11"
