[package]
name = "comphdl_web"
version = "0.1.0"
authors = ["Badel2 <2badel2@gmail.com>"]

[dependencies]
comphdl = { path = "../" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
vcd = "0.4"
lalrpop-util = "0.16"
regex = "1.0"
stdweb = "0.4"
log = "0.4"
env_logger = "0.5"
ansi_term = "0.11"
